# fgdb-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fgdb_toolserver.py  pyproject.toml
dtos/: __init__.py  requestobjects.py
fgdb_mcp_server/: __init__.py
gdb_ops/: __init__.py  gdb.py  gdb_tools.py
scripts/: test_list_domains.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_dtos.py  test_fgdb_toolserver.py  test_gdb.py  test_gdb_tools.py  test_integration_serialization.py  test_safety.py  test_validation_property.py
utils/: config.py  exceptions.py  safety.py  utility.py  validation.py
